<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/normalPadding"
        android:background="@color/primaryWhite"
        tools:context=".FragmentActivityDetail">

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textColor="@color/backGround"
            android:textStyle="bold"
            tools:text="Activity Detail"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/normalMargin"
            android:padding="@dimen/smallPadding"
            android:paddingBottom="@dimen/normalPadding"
            android:background="@drawable/border_dark_grey">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/greyDark"
                android:textSize="21sp"
                android:textStyle="bold"
                tools:text="Activity" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:textColor="@color/greyMedium"
                android:textSize="13sp"
                tools:text="@string/lorem_ipsum2" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/brownDark"
                android:layout_marginTop="7dp"
                android:textSize="12sp"
                tools:text="Indoor / Outdoor" />

            <TextView
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:layout_marginTop="7dp"
                android:textSize="12sp"
                tools:text="https://en.wikipedia.org/wiki/[activity title]" />

            <TextView
                android:id="@+id/calorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryOrange"
                android:layout_marginTop="7dp"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:text="B﻿urn N Calories / hour" />

        </LinearLayout>

        <Button
            android:id="@+id/start"
            android:layout_width="124dp"
            android:layout_height="37dp"
            android:background="@color/primaryOrange"
            android:textColor="@color/primaryWhite"
            android:layout_marginTop="@dimen/normalMargin"
            android:text="@string/start_burning" />

        <Button
            android:id="@+id/remind"
            android:layout_width="168dp"
            android:layout_height="37dp"
            android:layout_marginTop="@dimen/smallPadding"
            android:background="@color/greyDark"
            android:text="@string/remind"
            android:textColor="@color/primaryWhite" />

    </LinearLayout>
</layout>